[gd_scene load_steps=5 format=3 uid="uid://bgltktl1gnunj"]

[ext_resource type="PackedScene" uid="uid://dpywjxvk51urk" path="res://value/number_value.tscn" id="1_0i6k5"]
[ext_resource type="Script" path="res://value/scripts/units_value.gd" id="1_0xxpa"]
[ext_resource type="PackedScene" uid="uid://dgubn0nnkt3el" path="res://button/edit_button.tscn" id="3_cd2st"]
[ext_resource type="PackedScene" uid="uid://cvaht2opsulhx" path="res://button/confirm_button.tscn" id="4_p5bcj"]

[node name="UnitsValue" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_0xxpa")

[node name="NumberValue" parent="." instance=ExtResource("1_0i6k5")]
layout_mode = 2

[node name="UnitsControls" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="DropGroup" type="HBoxContainer" parent="UnitsControls"]
layout_mode = 2

[node name="UnitsChoice" type="OptionButton" parent="UnitsControls/DropGroup"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "Units"

[node name="EditButton" parent="UnitsControls/DropGroup" instance=ExtResource("3_cd2st")]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="UnitsEdit" type="LineEdit" parent="UnitsControls"]
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="ConfirmButton" parent="UnitsControls/UnitsEdit" instance=ExtResource("4_p5bcj")]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0

[connection signal="value_changed" from="NumberValue" to="." method="_on_value_changed"]
[connection signal="item_selected" from="UnitsControls/DropGroup/UnitsChoice" to="." method="_on_units_selected"]
[connection signal="pressed" from="UnitsControls/DropGroup/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="text_changed" from="UnitsControls/UnitsEdit" to="." method="_on_units_text_changed"]
[connection signal="pressed" from="UnitsControls/UnitsEdit/ConfirmButton" to="." method="_on_confirm_button_pressed"]
